分類由後端提供、修正 viewport

--- a/views/error.pug
+++ b/views/error.pug
@@ -1,3 +1,16 @@
-h1= message
-h2= error.status
-pre #{error.stack}
+doctype html
+html
+	head
+		title 錯誤！
+		meta(name="viewport",content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no")
+		meta(http-equiv="X-UA-Compatible",content="IE=edge")
+		meta(charset="UTF-8")
+		link(rel="stylesheet",href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css")
+		link(rel='stylesheet',href='./css/style.css')
+	body
+		.tg-container
+            h1= message
+            h2= error.status
+            pre #{error.stack}
+		 	
+			
