--- a/views/success.pug
+++ b/views/success.pug
@@ -2,8 +2,11 @@ doctype html
 html
 	head
 		title Telegram 蒐集君提交工具
+		meta(name="viewport",content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no")
+		meta(http-equiv="X-UA-Compatible",content="IE=edge")
 		link(rel='stylesheet',href='./css/style.css')
 	body
 		.tg-container
 			h1 提交成功
+			p 提交後仍須經過審核因此不會即時出現在官網上
 			a(href="/") 返回首頁
