--- a/views/success.pug
+++ b/views/success.pug
@@ -8,5 +8,5 @@ html
 	body
 		.tg-container
 			h1 提交成功
-			p 提交後仍須經過審核因此不會即時出現在官網上
-			a(href="/") 返回首頁
+			p 提交後仍須經過審核因此不會即時出現在網站上
+			a(href="/") 返回提交頁面
