--- a/views/index.pug
+++ b/views/index.pug
@@ -6,6 +6,10 @@ html
 		meta(http-equiv="X-UA-Compatible",content="IE=edge")
 		meta(name="description",content="Telegram 蒐集君的提交工具，可讓使用者提交群組或頻道至 Telegram 蒐集君")
 		meta(charset="UTF-8")
+		meta(property="og:type" content="website")
+		meta(property="og:site_name" content="😲Telegram 蒐集君😲")
+		meta(property="og:url" content="https://tg-submit.gnehs.net/")
+		meta(property="og:image" content="https://tg-submit.gnehs.net/img/open-graph.jpg")
 		link(rel="stylesheet",href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css")
 		link(rel='stylesheet',href='./css/style.css')
 	body
